# QRGen

./: CMakeLists.txt
libQRGen/: CMakeLists.txt
libQRGen/include/: qrgen.h
libQRGen/scripts/: error_correction_characteristics_gen.py  error_correction_characteristics_raw.txt
libQRGen/src/: data.cpp  data.h  ecccalculator.cpp  ecccalculator.h  gf.h  polynomial.cpp  polynomial.h  qr.cpp  qr.h  qrgen.cpp  symbol.cpp  symbol.h  util.h
libQRGen/test/: test_data.cpp  test_ecccalculator.cpp  test_gf.cpp  test_polynomial.cpp  test_qr.cpp  test_symbol.cpp
