# Copyright 2024 Benjamin Lutz.
#
# This file is part of QRGen. QRGen is free software: you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation, either version 3 of the License,
# or (at your option) any later version.

cmake_minimum_required(VERSION 3.12)

project(QRGen VERSION 0.1)

add_subdirectory(libQRGen)
